# realtime_skeletal_skinning_kiss3d

./: Cargo.toml  README.md
src/: algorithm.rs  main.rs
